// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/radio/demo/badge.tsx correctly 1`] = `
<div
  class="g-radio-group g-radio-group-solid css-var-test-id g-radio-css-var"
  role="radiogroup"
>
  <span
    class="g-badge css-var-test-id"
  >
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="1"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Click Me
      </span>
    </label>
    <sup
      class="g-scroll-number g-badge-count"
      data-show="true"
      title="1"
    >
      <bdi>
        <span
          class="g-scroll-number-only"
          style="transition:none"
        >
          <span
            class="g-scroll-number-only-unit current"
          >
            1
          </span>
        </span>
      </bdi>
    </sup>
  </span>
  <span
    class="g-badge css-var-test-id"
  >
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="2"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Not Me
      </span>
    </label>
    <sup
      class="g-scroll-number g-badge-count"
      data-show="true"
      title="2"
    >
      <bdi>
        <span
          class="g-scroll-number-only"
          style="transition:none"
        >
          <span
            class="g-scroll-number-only-unit current"
          >
            2
          </span>
        </span>
      </bdi>
    </sup>
  </span>
</div>
`;

exports[`renders components/radio/demo/basic.tsx correctly 1`] = `
<label
  class="g-radio-wrapper css-var-test-id g-radio-css-var"
>
  <span
    class="g-radio g-wave-target"
  >
    <input
      class="g-radio-input"
      type="radio"
    />
  </span>
  <span
    class="g-radio-label"
  >
    Radio
  </span>
</label>
`;

exports[`renders components/radio/demo/component-token.tsx correctly 1`] = `
<div
  class="g-space g-space-vertical g-space-gap-row-small g-space-gap-col-small css-var-test-id"
>
  <div
    class="g-space-item"
  >
    <label
      class="g-radio-wrapper g-radio-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-checked"
      >
        <input
          checked=""
          class="g-radio-input"
          type="radio"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Test
      </span>
    </label>
  </div>
  <div
    class="g-space-item"
  >
    <label
      class="g-radio-wrapper g-radio-wrapper-checked g-radio-wrapper-disabled css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-checked g-radio-disabled"
      >
        <input
          checked=""
          class="g-radio-input"
          disabled=""
          type="radio"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Disabled
      </span>
    </label>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
      role="radiogroup"
    >
      <label
        class="g-radio-button-wrapper g-radio-button-wrapper-checked css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio-button g-radio-button-checked"
        >
          <input
            checked=""
            class="g-radio-button-input"
            name="test-id"
            type="radio"
            value="a"
          />
        </span>
        <span
          class="g-radio-button-label"
        >
          Hangzhou
        </span>
      </label>
      <label
        class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio-button"
        >
          <input
            class="g-radio-button-input"
            name="test-id"
            type="radio"
            value="b"
          />
        </span>
        <span
          class="g-radio-button-label"
        >
          Shanghai
        </span>
      </label>
      <label
        class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio-button"
        >
          <input
            class="g-radio-button-input"
            name="test-id"
            type="radio"
            value="c"
          />
        </span>
        <span
          class="g-radio-button-label"
        >
          Beijing
        </span>
      </label>
      <label
        class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio-button"
        >
          <input
            class="g-radio-button-input"
            name="test-id"
            type="radio"
            value="d"
          />
        </span>
        <span
          class="g-radio-button-label"
        >
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
      role="radiogroup"
    >
      <label
        class="g-radio-button-wrapper g-radio-button-wrapper-checked g-radio-button-wrapper-disabled css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio-button g-radio-button-checked g-radio-button-disabled"
        >
          <input
            checked=""
            class="g-radio-button-input"
            disabled=""
            name="test-id"
            type="radio"
            value="a"
          />
        </span>
        <span
          class="g-radio-button-label"
        >
          Hangzhou
        </span>
      </label>
      <label
        class="g-radio-button-wrapper g-radio-button-wrapper-disabled css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio-button g-radio-button-disabled"
        >
          <input
            class="g-radio-button-input"
            disabled=""
            name="test-id"
            type="radio"
            value="b"
          />
        </span>
        <span
          class="g-radio-button-label"
        >
          Shanghai
        </span>
      </label>
      <label
        class="g-radio-button-wrapper g-radio-button-wrapper-disabled css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio-button g-radio-button-disabled"
        >
          <input
            class="g-radio-button-input"
            disabled=""
            name="test-id"
            type="radio"
            value="c"
          />
        </span>
        <span
          class="g-radio-button-label"
        >
          Beijing
        </span>
      </label>
      <label
        class="g-radio-button-wrapper g-radio-button-wrapper-disabled css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio-button g-radio-button-disabled"
        >
          <input
            class="g-radio-button-input"
            disabled=""
            name="test-id"
            type="radio"
            value="d"
          />
        </span>
        <span
          class="g-radio-button-label"
        >
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-radio-group g-radio-group-solid css-var-test-id g-radio-css-var"
      role="radiogroup"
    >
      <label
        class="g-radio-button-wrapper g-radio-button-wrapper-checked css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio-button g-radio-button-checked"
        >
          <input
            checked=""
            class="g-radio-button-input"
            name="test-id"
            type="radio"
            value="a"
          />
        </span>
        <span
          class="g-radio-button-label"
        >
          Hangzhou
        </span>
      </label>
      <label
        class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio-button"
        >
          <input
            class="g-radio-button-input"
            name="test-id"
            type="radio"
            value="b"
          />
        </span>
        <span
          class="g-radio-button-label"
        >
          Shanghai
        </span>
      </label>
      <label
        class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio-button"
        >
          <input
            class="g-radio-button-input"
            name="test-id"
            type="radio"
            value="c"
          />
        </span>
        <span
          class="g-radio-button-label"
        >
          Beijing
        </span>
      </label>
      <label
        class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio-button"
        >
          <input
            class="g-radio-button-input"
            name="test-id"
            type="radio"
            value="d"
          />
        </span>
        <span
          class="g-radio-button-label"
        >
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders components/radio/demo/debug-group-width.tsx correctly 1`] = `
<div
  style="width:280px;border:1px solid #eee;padding:16px"
>
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-wrapper g-radio-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-checked"
      >
        <input
          checked=""
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="a"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Short
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="b"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Long label that may wrap in narrow container
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="c"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Medium
      </span>
    </label>
  </div>
</div>
`;

exports[`renders components/radio/demo/debug-upload.tsx correctly 1`] = `
<div
  class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
>
  <div
    class="g-space-item"
  >
    <span
      class="g-upload-wrapper css-var-test-id"
    >
      <div
        class="g-upload g-upload-select"
      >
        <span
          class="g-upload"
        >
          <input
            accept=""
            name="file"
            style="display:none"
            type="file"
          />
          <label
            class="g-radio-wrapper css-var-test-id g-radio-css-var"
          >
            <span
              class="g-radio g-wave-target"
            >
              <input
                class="g-radio-input"
                type="radio"
              />
            </span>
            <span
              class="g-radio-label"
            >
              Radio
            </span>
          </label>
        </span>
      </div>
      <div
        class="g-upload-list g-upload-list-text"
      />
    </span>
  </div>
  <div
    class="g-space-item"
  >
    <span
      class="g-upload-wrapper css-var-test-id"
    >
      <div
        class="g-upload g-upload-select"
      >
        <span
          class="g-upload"
        >
          <input
            accept=""
            name="file"
            style="display:none"
            type="file"
          />
          <label
            class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
          >
            <span
              class="g-checkbox g-wave-target"
            >
              <input
                class="g-checkbox-input"
                type="checkbox"
              />
            </span>
            <span
              class="g-checkbox-label"
            >
              Checkbox
            </span>
          </label>
        </span>
      </div>
      <div
        class="g-upload-list g-upload-list-text"
      />
    </span>
  </div>
</div>
`;

exports[`renders components/radio/demo/disabled.tsx correctly 1`] = `
Array [
  <label
    class="g-radio-wrapper g-radio-wrapper-disabled css-var-test-id g-radio-css-var"
  >
    <span
      class="g-radio g-wave-target g-radio-disabled"
    >
      <input
        class="g-radio-input"
        disabled=""
        type="radio"
      />
    </span>
    <span
      class="g-radio-label"
    >
      Disabled
    </span>
  </label>,
  <label
    class="g-radio-wrapper g-radio-wrapper-disabled css-var-test-id g-radio-css-var"
  >
    <span
      class="g-radio g-wave-target g-radio-checked g-radio-disabled"
    >
      <input
        checked=""
        class="g-radio-input"
        disabled=""
        type="radio"
      />
    </span>
    <span
      class="g-radio-label"
    >
      Disabled
    </span>
  </label>,
  <br />,
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    style="margin-top:16px"
    type="button"
  >
    <span>
      Toggle disabled
    </span>
  </button>,
]
`;

exports[`renders components/radio/demo/radiobutton.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked"
      >
        <input
          checked=""
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="a"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Hangzhou
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="b"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Shanghai
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="c"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Beijing
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="d"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Chengdu
      </span>
    </label>
  </div>
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked"
      >
        <input
          checked=""
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="a"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Hangzhou
      </span>
    </label>
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-disabled css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-disabled"
      >
        <input
          class="g-radio-button-input"
          disabled=""
          name="test-id"
          type="radio"
          value="b"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Shanghai
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="c"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Beijing
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="d"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Chengdu
      </span>
    </label>
  </div>
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked g-radio-button-wrapper-disabled css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked g-radio-button-disabled"
      >
        <input
          checked=""
          class="g-radio-button-input"
          disabled=""
          name="test-id"
          type="radio"
          value="a"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Hangzhou
      </span>
    </label>
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-disabled css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-disabled"
      >
        <input
          class="g-radio-button-input"
          disabled=""
          name="test-id"
          type="radio"
          value="b"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Shanghai
      </span>
    </label>
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-disabled css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-disabled"
      >
        <input
          class="g-radio-button-input"
          disabled=""
          name="test-id"
          type="radio"
          value="c"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Beijing
      </span>
    </label>
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-disabled css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-disabled"
      >
        <input
          class="g-radio-button-input"
          disabled=""
          name="test-id"
          type="radio"
          value="d"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Chengdu
      </span>
    </label>
  </div>
</div>
`;

exports[`renders components/radio/demo/radiobutton-solid.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-radio-group g-radio-group-solid css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked"
      >
        <input
          checked=""
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="a"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Hangzhou
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="b"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Shanghai
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="c"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Beijing
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="d"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Chengdu
      </span>
    </label>
  </div>
  <div
    class="g-radio-group g-radio-group-solid css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="a"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Hangzhou
      </span>
    </label>
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-disabled css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-disabled"
      >
        <input
          class="g-radio-button-input"
          disabled=""
          name="test-id"
          type="radio"
          value="b"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Shanghai
      </span>
    </label>
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked"
      >
        <input
          checked=""
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="c"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Beijing
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="d"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Chengdu
      </span>
    </label>
  </div>
</div>
`;

exports[`renders components/radio/demo/radiogroup.tsx correctly 1`] = `
<div
  class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
  role="radiogroup"
>
  <label
    class="g-radio-wrapper g-radio-wrapper-checked option-1 css-var-test-id g-radio-css-var"
  >
    <span
      class="g-radio g-wave-target g-radio-checked"
    >
      <input
        checked=""
        class="g-radio-input"
        name="test-id"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="g-radio-label"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center g-flex-gap-small g-flex-vertical"
      >
        <span
          aria-label="line-chart"
          class="gicon gicon-line-chart"
          role="img"
          style="font-size:18px"
        >
          <svg
            aria-hidden="true"
            data-icon="line-chart"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M888 792H200V168c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v688c0 4.4 3.6 8 8 8h752c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM305.8 637.7c3.1 3.1 8.1 3.1 11.3 0l138.3-137.6L583 628.5c3.1 3.1 8.2 3.1 11.3 0l275.4-275.3c3.1-3.1 3.1-8.2 0-11.3l-39.6-39.6a8.03 8.03 0 00-11.3 0l-230 229.9L461.4 404a8.03 8.03 0 00-11.3 0L266.3 586.7a8.03 8.03 0 000 11.3l39.5 39.7z"
            />
          </svg>
        </span>
        LineChart
      </div>
    </span>
  </label>
  <label
    class="g-radio-wrapper option-2 css-var-test-id g-radio-css-var"
  >
    <span
      class="g-radio g-wave-target"
    >
      <input
        class="g-radio-input"
        name="test-id"
        type="radio"
        value="2"
      />
    </span>
    <span
      class="g-radio-label"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center g-flex-gap-small g-flex-vertical"
      >
        <span
          aria-label="dot-chart"
          class="gicon gicon-dot-chart"
          role="img"
          style="font-size:18px"
        >
          <svg
            aria-hidden="true"
            data-icon="dot-chart"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M888 792H200V168c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v688c0 4.4 3.6 8 8 8h752c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM288 604a64 64 0 10128 0 64 64 0 10-128 0zm118-224a48 48 0 1096 0 48 48 0 10-96 0zm158 228a96 96 0 10192 0 96 96 0 10-192 0zm148-314a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
        DotChart
      </div>
    </span>
  </label>
  <label
    class="g-radio-wrapper option-3 css-var-test-id g-radio-css-var"
  >
    <span
      class="g-radio g-wave-target"
    >
      <input
        class="g-radio-input"
        name="test-id"
        type="radio"
        value="3"
      />
    </span>
    <span
      class="g-radio-label"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center g-flex-gap-small g-flex-vertical"
      >
        <span
          aria-label="bar-chart"
          class="gicon gicon-bar-chart"
          role="img"
          style="font-size:18px"
        >
          <svg
            aria-hidden="true"
            data-icon="bar-chart"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M888 792H200V168c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v688c0 4.4 3.6 8 8 8h752c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm-600-80h56c4.4 0 8-3.6 8-8V560c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v144c0 4.4 3.6 8 8 8zm152 0h56c4.4 0 8-3.6 8-8V384c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v320c0 4.4 3.6 8 8 8zm152 0h56c4.4 0 8-3.6 8-8V462c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v242c0 4.4 3.6 8 8 8zm152 0h56c4.4 0 8-3.6 8-8V304c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v400c0 4.4 3.6 8 8 8z"
            />
          </svg>
        </span>
        BarChart
      </div>
    </span>
  </label>
  <label
    class="g-radio-wrapper option-4 css-var-test-id g-radio-css-var"
  >
    <span
      class="g-radio g-wave-target"
    >
      <input
        class="g-radio-input"
        name="test-id"
        type="radio"
        value="4"
      />
    </span>
    <span
      class="g-radio-label"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center g-flex-gap-small g-flex-vertical"
      >
        <span
          aria-label="pie-chart"
          class="gicon gicon-pie-chart"
          role="img"
          style="font-size:18px"
        >
          <svg
            aria-hidden="true"
            data-icon="pie-chart"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M864 518H506V160c0-4.4-3.6-8-8-8h-26a398.46 398.46 0 00-282.8 117.1 398.19 398.19 0 00-85.7 127.1A397.61 397.61 0 0072 552a398.46 398.46 0 00117.1 282.8c36.7 36.7 79.5 65.6 127.1 85.7A397.61 397.61 0 00472 952a398.46 398.46 0 00282.8-117.1c36.7-36.7 65.6-79.5 85.7-127.1A397.61 397.61 0 00872 552v-26c0-4.4-3.6-8-8-8zM705.7 787.8A331.59 331.59 0 01470.4 884c-88.1-.4-170.9-34.9-233.2-97.2C174.5 724.1 140 640.7 140 552c0-88.7 34.5-172.1 97.2-234.8 54.6-54.6 124.9-87.9 200.8-95.5V586h364.3c-7.7 76.3-41.3 147-96.6 201.8zM952 462.4l-2.6-28.2c-8.5-92.1-49.4-179-115.2-244.6A399.4 399.4 0 00589 74.6L560.7 72c-4.7-.4-8.7 3.2-8.7 7.9V464c0 4.4 3.6 8 8 8l384-1c4.7 0 8.4-4 8-8.6zm-332.2-58.2V147.6a332.24 332.24 0 01166.4 89.8c45.7 45.6 77 103.6 90 166.1l-256.4.7z"
            />
          </svg>
        </span>
        PieChart
      </div>
    </span>
  </label>
</div>
`;

exports[`renders components/radio/demo/radiogroup-block.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-radio-group g-radio-group-outline g-radio-group-block css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-wrapper g-radio-wrapper-checked g-radio-wrapper-block css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-checked"
      >
        <input
          checked=""
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="Apple"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Apple
      </span>
    </label>
    <label
      class="g-radio-wrapper g-radio-wrapper-block css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="Pear"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Pear
      </span>
    </label>
    <label
      class="g-radio-wrapper g-radio-wrapper-block css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="Orange"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Orange
      </span>
    </label>
  </div>
  <div
    class="g-radio-group g-radio-group-solid g-radio-group-block css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked g-radio-button-wrapper-block css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked"
      >
        <input
          checked=""
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="Apple"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Apple
      </span>
    </label>
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-block css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="Pear"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Pear
      </span>
    </label>
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-block css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="Orange"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Orange
      </span>
    </label>
  </div>
  <div
    class="g-radio-group g-radio-group-outline g-radio-group-block css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-block css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="Apple"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Apple
      </span>
    </label>
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked g-radio-button-wrapper-block css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked"
      >
        <input
          checked=""
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="Pear"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Pear
      </span>
    </label>
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-block css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="Orange"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`renders components/radio/demo/radiogroup-more.tsx correctly 1`] = `
<div
  class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var g-radio-group-vertical"
  role="radiogroup"
>
  <label
    class="g-radio-wrapper g-radio-wrapper-checked css-var-test-id g-radio-css-var"
    style="height:32px;line-height:32px"
  >
    <span
      class="g-radio g-wave-target g-radio-checked"
    >
      <input
        checked=""
        class="g-radio-input"
        name="test-id"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="g-radio-label"
    >
      Option A
    </span>
  </label>
  <label
    class="g-radio-wrapper css-var-test-id g-radio-css-var"
    style="height:32px;line-height:32px"
  >
    <span
      class="g-radio g-wave-target"
    >
      <input
        class="g-radio-input"
        name="test-id"
        type="radio"
        value="2"
      />
    </span>
    <span
      class="g-radio-label"
    >
      Option B
    </span>
  </label>
  <label
    class="g-radio-wrapper css-var-test-id g-radio-css-var"
    style="height:32px;line-height:32px"
  >
    <span
      class="g-radio g-wave-target"
    >
      <input
        class="g-radio-input"
        name="test-id"
        type="radio"
        value="3"
      />
    </span>
    <span
      class="g-radio-label"
    >
      Option C
    </span>
  </label>
  <label
    class="g-radio-wrapper css-var-test-id g-radio-css-var"
    style="height:32px;line-height:32px"
  >
    <span
      class="g-radio g-wave-target"
    >
      <input
        class="g-radio-input"
        name="test-id"
        type="radio"
        value="4"
      />
    </span>
    <span
      class="g-radio-label"
    >
      More...
    </span>
  </label>
</div>
`;

exports[`renders components/radio/demo/radiogroup-options.tsx correctly 1`] = `
Array [
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-wrapper g-radio-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-checked"
      >
        <input
          checked=""
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="Apple"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Apple
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="Pear"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Pear
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="Orange"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-wrapper g-radio-wrapper-checked label-1 css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-checked"
      >
        <input
          checked=""
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="Apple"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Apple
      </span>
    </label>
    <label
      class="g-radio-wrapper label-2 css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="Pear"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Pear
      </span>
    </label>
    <label
      class="g-radio-wrapper g-radio-wrapper-disabled label-3 css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-disabled"
      >
        <input
          class="g-radio-input"
          disabled=""
          name="test-id"
          type="radio"
          value="Orange"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked label-1 css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked"
      >
        <input
          checked=""
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="Apple"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Apple
      </span>
    </label>
    <label
      class="g-radio-button-wrapper label-2 css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="Pear"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Pear
      </span>
    </label>
    <label
      class="g-radio-button-wrapper label-3 css-var-test-id g-radio-css-var"
      title="Orange"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="Orange"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="g-radio-group g-radio-group-solid css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked label-1 css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked"
      >
        <input
          checked=""
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="Apple"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Apple
      </span>
    </label>
    <label
      class="g-radio-button-wrapper label-2 css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="Pear"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Pear
      </span>
    </label>
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-disabled label-3 css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-disabled"
      >
        <input
          class="g-radio-button-input"
          disabled=""
          name="test-id"
          type="radio"
          value="Orange"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Orange
      </span>
    </label>
  </div>,
]
`;

exports[`renders components/radio/demo/radiogroup-with-name.tsx correctly 1`] = `
<div
  class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
  role="radiogroup"
>
  <label
    class="g-radio-wrapper g-radio-wrapper-checked css-var-test-id g-radio-css-var"
  >
    <span
      class="g-radio g-wave-target g-radio-checked"
    >
      <input
        checked=""
        class="g-radio-input"
        name="radiogroup"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="g-radio-label"
    >
      A
    </span>
  </label>
  <label
    class="g-radio-wrapper css-var-test-id g-radio-css-var"
  >
    <span
      class="g-radio g-wave-target"
    >
      <input
        class="g-radio-input"
        name="radiogroup"
        type="radio"
        value="2"
      />
    </span>
    <span
      class="g-radio-label"
    >
      B
    </span>
  </label>
  <label
    class="g-radio-wrapper css-var-test-id g-radio-css-var"
  >
    <span
      class="g-radio g-wave-target"
    >
      <input
        class="g-radio-input"
        name="radiogroup"
        type="radio"
        value="3"
      />
    </span>
    <span
      class="g-radio-label"
    >
      C
    </span>
  </label>
  <label
    class="g-radio-wrapper css-var-test-id g-radio-css-var"
  >
    <span
      class="g-radio g-wave-target"
    >
      <input
        class="g-radio-input"
        name="radiogroup"
        type="radio"
        value="4"
      />
    </span>
    <span
      class="g-radio-label"
    >
      D
    </span>
  </label>
</div>
`;

exports[`renders components/radio/demo/size.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-radio-group g-radio-group-outline g-radio-group-large css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked"
      >
        <input
          checked=""
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="a"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Hangzhou
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="b"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Shanghai
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="c"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Beijing
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="d"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Chengdu
      </span>
    </label>
  </div>
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked"
      >
        <input
          checked=""
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="a"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Hangzhou
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="b"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Shanghai
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="c"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Beijing
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="d"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Chengdu
      </span>
    </label>
  </div>
  <div
    class="g-radio-group g-radio-group-outline g-radio-group-small css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked"
      >
        <input
          checked=""
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="a"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Hangzhou
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="b"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Shanghai
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="c"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Beijing
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="d"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Chengdu
      </span>
    </label>
  </div>
</div>
`;

exports[`renders components/radio/demo/style-class.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <label
    class="g-radio-wrapper g-radio-wrapper-checked css-var-test-id g-radio-css-var"
  >
    <span
      class="g-radio g-wave-target g-radio-checked"
      style="border-radius:6px"
    >
      <input
        checked=""
        class="g-radio-input"
        name="style-class"
        type="radio"
      />
    </span>
    <span
      class="g-radio-label"
      style="color:blue"
    >
      Object styles
    </span>
  </label>
  <label
    class="g-radio-wrapper acss-1q9j8js css-var-test-id g-radio-css-var"
  >
    <span
      class="g-radio acss-1sy50lm g-wave-target"
    >
      <input
        class="g-radio-input"
        name="style-class"
        type="radio"
      />
    </span>
    <span
      class="g-radio-label acss-eesh8g"
    >
      Function classNames
    </span>
  </label>
</div>
`;

exports[`renders components/radio/demo/wireframe.tsx correctly 1`] = `
Array [
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-wrapper g-radio-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-checked"
      >
        <input
          checked=""
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="1"
        />
      </span>
      <span
        class="g-radio-label"
      >
        A
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="2"
        />
      </span>
      <span
        class="g-radio-label"
      >
        B
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="3"
        />
      </span>
      <span
        class="g-radio-label"
      >
        C
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="4"
        />
      </span>
      <span
        class="g-radio-label"
      >
        D
      </span>
    </label>
  </div>,
  <br />,
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-wrapper g-radio-wrapper-checked g-radio-wrapper-disabled css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-checked g-radio-disabled"
      >
        <input
          checked=""
          class="g-radio-input"
          disabled=""
          name="test-id"
          type="radio"
          value="1"
        />
      </span>
      <span
        class="g-radio-label"
      >
        A
      </span>
    </label>
    <label
      class="g-radio-wrapper g-radio-wrapper-disabled css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-disabled"
      >
        <input
          class="g-radio-input"
          disabled=""
          name="test-id"
          type="radio"
          value="2"
        />
      </span>
      <span
        class="g-radio-label"
      >
        B
      </span>
    </label>
    <label
      class="g-radio-wrapper g-radio-wrapper-disabled css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-disabled"
      >
        <input
          class="g-radio-input"
          disabled=""
          name="test-id"
          type="radio"
          value="3"
        />
      </span>
      <span
        class="g-radio-label"
      >
        C
      </span>
    </label>
    <label
      class="g-radio-wrapper g-radio-wrapper-disabled css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-disabled"
      >
        <input
          class="g-radio-input"
          disabled=""
          name="test-id"
          type="radio"
          value="4"
        />
      </span>
      <span
        class="g-radio-label"
      >
        D
      </span>
    </label>
  </div>,
]
`;
